# Learning_code_and_notes

./: README.md
C/1syntax/: C_syntax.c  array_and_pointer.c  dynamic_memory_allocation.c  knowledge_point.md  pointer.c  recursion.c  strings.c  struct_pointer.c
C/2example/: e_1receipt_printf.c
Cmake/: readme.md  tree.md
Cmake/CMakelists_Structure/: CMakeLists.txt
Cmake/CMakelists_Structure/src/: sub.c
Cmake/Create_Library/: CMakeLists.txt
Cmake/Create_Library/src/: add.c  times.c
Cmake/Link_Library/: CMakeLists.txt  main.c
Cmake/Link_Library/include/: head.h
Cmake/Link_Library/lib/: libshared.dylib
DataStructure/:  introduction.md  linked_list.c  sequence_list.c  test_gcc.c
DataStructure/output/: C_syntax  array_and_pointer  demo1  dynamic_memory_allocation  liner_list  linked_list  pointer  struct  struct_pointer  test_gcc
DataStructure/output/C_syntax.dSYM/Contents/: Info.plist
DataStructure/output/C_syntax.dSYM/Contents/Resources/DWARF/: C_syntax
DataStructure/output/array_and_pointer.dSYM/Contents/: Info.plist
DataStructure/output/array_and_pointer.dSYM/Contents/Resources/DWARF/: array_and_pointer
DataStructure/output/demo1.dSYM/Contents/Resources/DWARF/: demo1
DataStructure/output/liner_list.dSYM/Contents/: Info.plist
DataStructure/output/test_gcc.dSYM/Contents/: Info.plist
English/: course_notes.md
Tool_syntax/: LaTex_syntax.md  Terminal_shell.md  markdown_syntax.md  mermind.md
VSCode_Configuration/: MyConfiguration.md  readme.md
git_vscode_learning/: notes.md
复试专业课/: Gradient_Divergence_Curl.md  transformer.md
(+17 files in other folders)
